<resources>
    <string name="app_name">Challenge Tracker</string>
    <string name="nav_header_title">Challenge Tracker</string>
    <string name="nav_header_subtitle">Completing my challenges</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_challenge">Add Challenge</string>
    <string name="menu_view_challenges">View Challenges</string>
    <string name="title">Title</string>
    <string name="challenge_added">Challenge Added !</string>
    <string name="days">Days</string>
    <string name="completed">Completed</string>
    <string name="total">Total</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="notes">Enable Notes</string>
    <string name="notes_heading">Notes for your thoughts :</string>
    <string name="added">Added</string>
    <string name="add_another">Add Another</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="start_challenging">Start challenging</string>
    <string name="start_now">Start now</string>
    <string name="done">Done !</string>
    <string name="done_text">Done</string>
    <string name="no_notes">No Notes Captured for this challenge</string>
    <string name="no_challenges">No challenges</string>
    <string name="required">Required</string>
    <string name="select">Select</string>
    <string name="confirmation_message">Are you sure you want to delete ?</string>
</resources>
