<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginRight="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_8"
    card_view:cardCornerRadius="@dimen/dimen_16"
    card_view:cardElevation="@dimen/dimen_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/challenge_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:text="@string/challenge_added"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_text_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/add_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_48"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:layout_marginBottom="@dimen/dimen_28"
            android:background="@color/colorPrimary"
            android:text="@string/add_another"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/challenge_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_48"
            android:layout_marginBottom="@dimen/dimen_28"
            android:text="@string/home"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/challenge_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

