<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:id="@+id/add_challenge_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginRight="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_8"
    card_view:cardCornerRadius="@dimen/dimen_16"
    card_view:cardElevation="@dimen/dimen_16">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/challenge_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_28"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:hint="@string/title"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/completed_days"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_28"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:hint="@string/completed"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_text_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_days"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:hint="@string/total"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_text_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_28"
            android:layout_marginTop="@dimen/dimen_28"
            android:text="@string/notes"
            android:textSize="@dimen/dimen_text_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/completed_days"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/notes_needed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_12"
            android:layout_marginTop="@dimen/dimen_16"
            app:layout_constraintStart_toEndOf="@+id/notes_text"
            app:layout_constraintTop_toBottomOf="@id/completed_days"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28"
            android:layout_marginEnd="@dimen/dimen_28"
            android:layout_marginBottom="@dimen/dimen_28"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

